Handle intent-based navigations from gws.

We now explicitly ignore provisional navigations for
non HTTP/HTTPS schemes.

We also consider navigations from the intent redirector
to be from search.

BUG=607330

Review-Url: https://codereview.chromium.org/1929673004
Cr-Commit-Position: refs/heads/master@{#390652}

Former-commit-id: f91fa02d7d146fb0dc4d17b25aef3128f644a439